Redesign level progression